Fix scrollbar issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1663,8 +1663,12 @@ html {
       width: 76%; } }
 
 .c-content--max-height {
-  height: max-content;
-  overflow: hidden; }
+  overflow: scroll;
+  min-height: max-content; }
+  @media only screen and (min-width: 980px) {
+    .c-content--max-height {
+      height: max-content;
+      overflow: hidden; } }
 
 /*------------------------------------*\
   #Container block -> All posts => arcvhives
@@ -1697,11 +1701,13 @@ html {
   width: 100%;
   height: max-content;
   min-height: 325px;
-  margin-bottom: 48px;
-  text-align: left; }
+  text-align: left;
+  padding-bottom: 68px; }
   @media only screen and (min-width: 980px) {
     .c-post {
-      width: 35%; } }
+      width: 35%;
+      margin-bottom: 48px;
+      padding-bottom: 0px; } }
 
 .c-post_thumbnail {
   border-radius: 7px;
@@ -2514,12 +2520,12 @@ li {
 
 .c-single__slider--full-width .flickity-viewport .flickity-slider .carousel__cell__single {
   width: 90%;
-  padding-left: 20%;
-  padding-right: 20%; }
+  padding-left: 10%;
+  padding-right: 10%; }
   @media only screen and (min-width: 1400px) {
     .c-single__slider--full-width .flickity-viewport .flickity-slider .carousel__cell__single {
-      padding-left: 25%;
-      padding-right: 25%; } }
+      padding-left: 15%;
+      padding-right: 15%; } }
 
 [data-simplebar] {
   position: relative;
