--- a/assets/src/scss/external/_flickity.scss
+++ b/assets/src/scss/external/_flickity.scss
@@ -510,12 +510,12 @@
     .flickity-slider {
       .carousel__cell__single {
         width: 90%;
-        padding-left: 20%;
-        padding-right: 20%;
+        padding-left: 10%;
+        padding-right: 10%;
 
         @include media(wide) {
-          padding-left: 25%;
-          padding-right: 25%;
+          padding-left: 15%;
+          padding-right: 15%;
         }
       }
     }
